src/guestfs-actions.h

/* libguestfs generated file
 * WARNING: THIS FILE IS GENERATED BY 'src/generator.ml'.
 * ANY CHANGES YOU MAKE TO THIS FILE WILL BE LOST.
 *
 * Copyright (C) 2009 Red Hat Inc.
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 */

extern int guestfs_test0 (guestfs_h *handle, const char *str, const char *optstr, char * const* const strlist, int b, int integer, const char *filein, const char *fileout);
extern int guestfs_test0rint (guestfs_h *handle, const char *val);
extern int guestfs_test0rinterr (guestfs_h *handle);
extern int64_t guestfs_test0rint64 (guestfs_h *handle, const char *val);
extern int64_t guestfs_test0rint64err (guestfs_h *handle);
extern int guestfs_launch (guestfs_h *handle);
extern int guestfs_wait_ready (guestfs_h *handle);
extern int guestfs_kill_subprocess (guestfs_h *handle);
extern int guestfs_add_drive (guestfs_h *handle, const char *filename);
extern int guestfs_add_cdrom (guestfs_h *handle, const char *filename);
extern int guestfs_add_drive_ro (guestfs_h *handle, const char *filename);
extern int guestfs_config (guestfs_h *handle, const char *qemuparam, const char *qemuvalue);
extern int guestfs_set_qemu (guestfs_h *handle, const char *qemu);
extern int guestfs_set_path (guestfs_h *handle, const char *path);
extern int guestfs_set_append (guestfs_h *handle, const char *append);
extern int guestfs_set_autosync (guestfs_h *handle, int autosync);
extern int guestfs_set_verbose (guestfs_h *handle, int verbose);
extern int guestfs_get_state (guestfs_h *handle);
extern int guestfs_set_busy (guestfs_h *handle);
extern int guestfs_set_ready (guestfs_h *handle);
extern int guestfs_end_busy (guestfs_h *handle);
extern int guestfs_mount (guestfs_h *handle, const char *device, const char *mountpoint);
extern int guestfs_sync (guestfs_h *handle);
extern int guestfs_touch (guestfs_h *handle, const char *path);
extern int guestfs_aug_init (guestfs_h *handle, const char *root, int flags);