src/guestfs.h

typedef struct guestfs_h guestfs_h;
/* Connection management. */
extern guestfs_h *guestfs_create (void);
extern void guestfs_close (guestfs_h *g);
/* Error handling. */
typedef void (*guestfs_error_handler_cb) (guestfs_h *g, void *data, const char *msg);
extern void guestfs_set_error_handler (guestfs_h *g, guestfs_error_handler_cb cb, void *data);